--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
         "bitset": "c",
         "chrono": "c",
         "algorithm": "c",
-        "random": "c"
+        "random": "c",
+        "stdlib.h": "c"
     }
 }
